--- a/sections/footerold.liquid
+++ b/sections/footerold.liquid
@@ -197,7 +197,7 @@
     font-size:22px
 }
 .footer-wrapper .widget-area{
-    padding:60px 0;
+    padding:60px 0 15px 0;
     position:relative
 }
 .footer-wrapper .footer-logo{
