--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -369,14 +369,8 @@
     text-transform: uppercase;
 }
   .card__heading a{
-<<<<<<< HEAD
+
     font-family: "HelveticaNeue-CondensedBold";
-
-    font-family: "HelveticaNeue-CondensedBold"; 
-
-=======
-    font-family: "HelveticaNeue-CondensedBold"; 
->>>>>>> 09595e23b67a2b0fb0d14b96f90cb0dd30b849c5
     font-style: normal;
     font-weight: 800;
     font-size: 19px;
@@ -397,3 +391,81 @@
     padding:0 !important;
   }
 </style>
+
+
+<script>
+  async function getUsers(e) {
+    let urllink = window.location.host
+
+    let url = `${e}.json`;
+    try {
+        let res = await fetch(url);
+        return await res.json();
+    } catch (error) {
+        console.log(error);
+    }
+  }
+  async function renderUsersa(e) {
+
+
+    console.log(e);
+
+    let users = await getUsers(e.dataset.url);
+
+    console.log(users);
+    
+ 
+
+
+    if ( users.product.options[0].name != null && users.product.options[0].name === 'Color'){
+      users.product.variants.forEach((user,index) => {
+      
+ console.log(users.product.options[0].name); 
+      });
+
+    } else if(users.product.options[1].name != null && users.product.options[1].name === 'Color'){
+      users.product.variants.forEach((user,index) => {
+   
+
+
+
+          if(user.image_id != null   &&  e.dataset.color ===  user.option2 ){
+       
+            console.log(user);
+            
+
+
+             users.product.images.forEach((img)=>{
+            
+                  
+         
+               if(img.id === user.image_id ){
+                let myElement = document.getElementById(e.dataset.imageid);
+     console.log(img.src); 
+                myElement.src= img.src
+              }
+            }) 
+          
+          } else{
+         console.log("Image not found")
+          }
+   
+      
+      });
+    
+    } else if(users.product.options[2].name != null && users.product.options[2].name === 'Color'){
+      users.product.variants.forEach((user,index) => {
+ console.log(users.product.options[2].name); 
+       
+      
+      });
+    }
+
+      $('.card-proudctimage  .s-card-color').click( function() {
+        $(this).addClass('active').siblings().removeClass('active');
+      });
+
+  }
+
+
+</script>
