--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -154,6 +154,93 @@
 
                           
 
+                        {% elsif  customer and customer.tags contains 'wholesale1' %} 
+                        {% if product.tags contains 'wholesale1' %}
+                                        
+                                   
+                          {% assign lazy_load = false %}
+                          {%- if forloop.index > 2 -%}
+                            {%- assign lazy_load = true -%}
+                          {%- endif -%}
+                                <li class="grid__item padding-bottom">
+                                  {% render 'card-product',
+                                    card_product: product,
+                                    media_aspect_ratio: section.settings.image_ratio,
+                                    show_secondary_image: section.settings.show_secondary_image,
+                                    show_vendor: section.settings.show_vendor,
+                                    show_rating: section.settings.show_rating,
+                                    lazy_load: lazy_load,
+                                    show_quick_add: section.settings.enable_quick_add,
+                                    section_id: section.id
+          
+                                  %}
+                                </li>
+
+
+
+                          {% else %}
+      
+                
+                          {% endif %} 
+
+                          {% comment %} 2  {% endcomment %}
+                          {% elsif  customer and customer.tags contains 'wholesale2' %} 
+                          {% if product.tags contains 'wholesale2' %}
+                                          
+                                     
+                            {% assign lazy_load = false %}
+                            {%- if forloop.index > 2 -%}
+                              {%- assign lazy_load = true -%}
+                            {%- endif -%}
+                                  <li class="grid__item padding-bottom">
+                                    {% render 'card-product',
+                                      card_product: product,
+                                      media_aspect_ratio: section.settings.image_ratio,
+                                      show_secondary_image: section.settings.show_secondary_image,
+                                      show_vendor: section.settings.show_vendor,
+                                      show_rating: section.settings.show_rating,
+                                      lazy_load: lazy_load,
+                                      show_quick_add: section.settings.enable_quick_add,
+                                      section_id: section.id
+            
+                                    %}
+                                  </li>
+  
+  
+  
+                            {% else %}
+        
+                  
+                            {% endif %} 
+                            {% comment %} 3 {% endcomment %}
+                            {% elsif  customer and customer.tags contains 'wholesale3' %} 
+                            {% if product.tags contains 'wholesale3' %}
+                                            
+                                       
+                              {% assign lazy_load = false %}
+                              {%- if forloop.index > 2 -%}
+                                {%- assign lazy_load = true -%}
+                              {%- endif -%}
+                                    <li class="grid__item padding-bottom">
+                                      {% render 'card-product',
+                                        card_product: product,
+                                        media_aspect_ratio: section.settings.image_ratio,
+                                        show_secondary_image: section.settings.show_secondary_image,
+                                        show_vendor: section.settings.show_vendor,
+                                        show_rating: section.settings.show_rating,
+                                        lazy_load: lazy_load,
+                                        show_quick_add: section.settings.enable_quick_add,
+                                        section_id: section.id
+              
+                                      %}
+                                    </li>
+    
+    
+    
+                              {% else %}
+          
+                    
+                              {% endif %} 
                         {% else %}
                         {% unless customer.tags contains 'wholesale' %}
                             
