--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -73,7 +73,11 @@
     padding-top: 1rem;
     line-height: calc(1 + 0.8 / var(--font-body-scale));
   }
-
+  .cart-count-bubble span {
+    background: black !important;
+    border-radius: 30px;
+    line-height: 6px;
+}
   @media screen and (min-width: 750px) {
     .list-menu__item--link {
       padding-bottom: 0.5rem;
